# Simple_AI

./: CMakeLists.txt  TP2.cpp  configuration.h  joueur.h  ligne.h  node.h  tree.h
src/: CMakeLists.txt  TP2.cpp  configuration.h
